...
  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(builder: (context, constraints) {
      final theme = ThemeProvider.of(context).theme(context);
      return Scaffold(
        appBar: AppBar(
          title: const Text('Info'),
          leading: GestureDetector(
            child: const Icon(Icons.arrow_back),
            onTap: () {
              return GoRouter.of(context).go('/');
            },
          ),
...
          child: Column(
            children: [
              Expanded(
                child: Container(),
              ),
              const Text(
                'Ich freue mich, dass du diese App verwendest! Vielen Dank 😊',
                textAlign: TextAlign.center,
              ),
              Expanded(
                child: Container(),
              ),
              Row(
...
